--- a/README.adoc
+++ b/README.adoc
@@ -1,6 +1,7 @@
-> :warning: Archived. You'll find all EE's [in tis repo](https://github.com/jeichler/ee) - including an updated version of this one. It's pushed to https://quay.io/repository/jaeichle/ee-redhat-cop-collections
-
 :hide-uri-scheme:
+
+> **Warning**
+> Archived. You'll find all EE's in https://github.com/jeichler/ee - including an updated version of this one. It's pushed to https://quay.io/repository/jaeichle/ee-redhat-cop-collections
 
 === Why?
 
